2002-07-04  Maciej Stachowiak  <mjs@apple.com>

	Say "Go to" instead of "Link to" for links that won't open a new
	window. Also, the code is now set up to change the status text
	when modifier keys are pressed, but the code is disabled for now
	because it's impossible to do reliably.
	
        * khtml/khtml_part.cpp:
        (KHTMLPart::overURL):
        (KHTMLPart::khtmlMouseMoveEvent):
        * khtml/khtml_part.h:

2002-07-03  Darin Adler  <darin@apple.com>

	A small KURL speed improvement.

        * khtml/misc/loader.cpp:
        (Cache::requestImage):
        (Cache::requestStyleSheet):
        (Cache::requestScript):
	Don't do the isMalformed check, because it's expensive and has no clear benefit.
	There's no harm in caching null results for malformed URLs.

        * kwq/KWQKURL.mm:
        (KURL::KURL): Make the default constructor faster by not running all the
	normalize code on the empty string.

=== Alexander-11 ===

2002-07-03  Maciej Stachowiak  <mjs@apple.com>

        WebCore part of fixes for:

	Radar 2950616 - JavaScript window.screenX and window.screenY always return -1
	Radar 2950614 - JavaScript window.screenLeft and window.screenTop
	properties are unimplemented
	Radar 2950609 - JavaScript window.outerHeight and
	window.outerWidth properties always return 0

        * khtml/ecma/kjs_window.h:
        * khtml/ecma/kjs_window.cpp:
	(Window::get): Make ScreenLeft and ScreenTop synonyms for ScreenX
	and ScreenY respectively.
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPartImpl::setView): Set the real part's view too.
        * kwq/kdecore/kwin.h: Remove unneeded fields.
        * kwq/KWQKWin.mm:
        (KWin::info): Implemented.
        * kwq/qt/qwidget.h: 
        * kwq/KWQWidget.mm: 
	(QWidget::winId): Return long instead of int, to make sure there
	is room for a pointer even on 64-bit architectures.
        (QWidget::mapToGlobal): Use the top level widget to map.

2002-07-03  Richard Williamson  <rjw@apple.com>
