@@ -1,3 +1,9 @@
+2002-07-06  Darin Adler  <darin@apple.com>
+
+        * kwq/KWQKHTMLPart.mm: (KWQKHTMLPartImpl::write): Remove reference
+	to nonexistent class in a comment.
+        * kwq/KWQKHTMLPartImpl.h: Remove unused and unimplemented getDataSource().
+
 2002-07-04  Maciej Stachowiak  <mjs@apple.com>
 
 	Say "Go to" instead of "Link to" for links that won't open a new
